--- a/index.html
+++ b/index.html
@@ -14,7 +14,31 @@
 </head>
 <body>
     <div class="main">
-        <div class="sidebar">Sidebar</div>
+        <div class="sidebar">
+            <div class="Nav">
+                <div class="nav-option" style="opacity: 1;">
+                    <i class="fa-solid fa-house"></i>
+                    <a href="#">Home</a>
+                </div>
+                <div class="nav-option">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <a href="#">Search</a>
+                </div>
+            </div>
+            <div class="library">
+                <div class="options">
+                    <div class="library-option nav-option">
+                        <img src="./assets/library_icon.png">
+                        <a href="#">Your Library</a>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-solid fa-plus icons"></i>
+                        <i class="fa-solid fa-arrow-right icons"></i>
+                    </div>
+                </div>
+                <div class="boxes"></div>
+            </div>
+        </div>
         <div class="main-content">Main-Content</div>
         <div class="music-player">Music-Player</div>
     </div>
