--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
                         <i class="fa-solid fa-arrow-right icons"></i>
                     </div>
                 </div>
-                <div class="boxes"></div>
+                <div class="lib-box">
+                    <div class="box-p1">Create your first playlist</div>
+                    <div class="box-p2">It's easy we'll help you</div>
+                    <button class="badge">Create Playlist</button>
+                </div>
             </div>
         </div>
         <div class="main-content">Main-Content</div>
