--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                     </div>
                 </div>
                 <div class="lib-box">
-                    <div class="box-p1">Create your first playlist</div>
-                    <div class="box-p2">It's easy we'll help you</div>
+                    <p class="box-p1">Create your first playlist</p>
+                    <p class="box-p2">It's easy we'll help you</p>
                     <button class="badge">Create Playlist</button>
                 </div>
+                
             </div>
         </div>
         <div class="main-content">Main-Content</div>
