--- a/index.html
+++ b/index.html
@@ -51,13 +51,22 @@
                     <img src="./assets/forward_icon.png" class="hide">
                 </div>
                 <div class="sticky-nav-options">
-                    <button class="badge nav-item">Explore Premium</button>
+                    <button class="badge nav-item hide">Explore Premium</button>
                     <button class="badge nav-item dark-badge"><i class="fa-regular fa-circle-down" style="margin-right: 5px;"></i>Install App</button>
                     <i class="fa-regular fa-user"></i>
                 </div>
                 
             </div>
-            <div class="cards"></div>
+            <div class="cards">
+                <h2>Recently Played</h2>
+                <div class="cards-container">
+                    <div class="card">
+                        <img src="./assets/card1img.jpeg" card-img>
+                        <p class="card-title">Top 50 - Global</p>
+                        <p class="card-info">Your daily updates of the most played tracks</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="music-player">Music-Player</div>
     </div>
