--- a/index.html
+++ b/index.html
@@ -57,16 +57,23 @@
                 </div>
                 
             </div>
-            <div class="cards">
                 <h2>Recently Played</h2>
                 <div class="cards-container">
                     <div class="card">
                         <img src="./assets/card1img.jpeg" card-img>
                         <p class="card-title">Top 50 - Global</p>
-                        <p class="card-info">Your daily updates of the most played tracks</p>
+                        <p class="card-info">Your daily updates of the most played...</p>
                     </div>
                 </div>
-            </div>
+
+                <h2>Trending Now near you</h2>
+                <div class="cards-container">
+                    <div class="card">
+                        <img src="./assets/card1img.jpeg" card-img>
+                        <p class="card-title">Top 50 - Global</p>
+                        <p class="card-info">Your daily updates of the most played...</p>
+                    </div>
+                </div>
         </div>
         <div class="music-player">Music-Player</div>
     </div>
