--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <img src="./assets/player_icon2.png" class="player-control-icon">
                     <img src="./assets/player_icon3.png" class="player-control-icon">
                     <img src="./assets/player_icon4.png" class="player-control-icon">
-                    <img src="./assets/player_icon5.png" class="player-control-icon">
+                    <img src="./assets/player_icon5.png" class="player-control-icon" style="opacity: 1;height:2rem;">
                 </div>
                 <div class="playback-bar">
                     <span class="curr-time">00:00</span>
@@ -128,7 +128,7 @@
                     <span class="tot-time">3:34</span>
                 </div>
             </div>
-            <div class="control"></div>
+            <div class="controls"></div>
         </div>
     </div>
 </body>
