--- a/index.html
+++ b/index.html
@@ -113,14 +113,18 @@
         </div>
 
         <div class="music-player">
-            <div class="album"></div>
+            <div class="album">
+                <img src="./Homework Assets/album_picture.jpeg">
+                <p class="pd">Daylight</p>
+                
+            </div>
             <div class="player">
                 <div class="player-controls">
                     <img src="./assets/player_icon1.png" class="player-control-icon">
                     <img src="./assets/player_icon2.png" class="player-control-icon">
                     <img src="./assets/player_icon3.png" class="player-control-icon">
                     <img src="./assets/player_icon4.png" class="player-control-icon">
-                    <img src="./assets/player_icon5.png" class="player-control-icon" style="opacity: 1;height:2rem;">
+                    <img src="./assets/player_icon5.png" class="player-control-icon" style="opacity: 1;height:1rem;">
                 </div>
                 <div class="playback-bar">
                     <span class="curr-time">00:00</span>
