--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="music-player">
             <div class="album">
-                <img src="./Homework Assets/album_picture.jpeg">
+                <img src="./Assets2/album_picture.jpeg">
                 <p class="pd">Daylight</p>
                 
             </div>
